// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/wcag/h63.md inline validation: correct-col 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-colgroup 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-row 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-rowgroup 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: incorrect-auto 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 20,
        "line": 4,
        "message": "<th> element must have a valid scope attribute: row, col, rowgroup or colgroup",
        "offset": 91,
        "ruleId": "wcag/h63",
        "ruleUrl": "https://html-validate.org/rules/wcag/h63.html",
        "selector": "table > tr > th",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<table>
    <tr>
        <!-- auto state cannot be set with a value -->
        <th scope="auto"></th>
    </tr>
</table>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/wcag/h63.md inline validation: incorrect-missing 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 10,
        "line": 3,
        "message": "<th> element must have a valid scope attribute: row, col, rowgroup or colgroup",
        "offset": 26,
        "ruleId": "wcag/h63",
        "ruleUrl": "https://html-validate.org/rules/wcag/h63.html",
        "selector": "table > tr > th",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<table>
    <tr>
        <th></th>
    </tr>
</table>",
    "warningCount": 0,
  },
]
`;
